add build partition, litematic export, tests